# ocaml-cordova-plugin-media-capture

./: .travis-ci.sh  META  Makefile  Makefile.conf  README.md  cordova-plugin-media-capture.opam  dune-project  media_capture.mli
.github/workflows/: main.yml
opam/: opam
src/: cordova_media_capture.mli  dune
test/: test.ml
